--- a/internal.html
+++ b/internal.html
@@ -1,77 +1,16 @@
 <html>
 <head>
-<title>
-ABCD
-</title>
+<style>
+body {background-color:pink;color:powderblue;}
+a {color:red;}
+a:link{color:blue;}
+a:vlink{color:green;}
+a:hover{color:violet;}
+a:active{color:black;}
+
+</style>
 </head>
 <body>
-<a href="#bottom">click to down<a/>
-<h1 id="top">top</h1>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>hello world<br/>hello world<br/>hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-
-
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-hello world<br/>
-<a href="#top">click here to go top<a/>
-<h1 id="bottom">down</h1>
+<a href="https://www.youtube.com"><h2>Youtube</h2></a>
 </body>
 </html>
